[package]
name = "jserve"
version = "0.1.0"
edition = "2021"
authors = ["Jerome George"]
description = "A Rust-based server application using Actix-Web."
license = "MIT"
repository = "https://github.com/dreamcatcher45/jserve"
homepage = "https://dreamcatcher45.github.io/jserve/"
documentation = "https://dreamcatcher45.github.io/jserve/"
exclude = ["assets/*", "index.html"]


[dependencies]
actix-web = "4.5.1"
anyhow = "1.0.80"
env_logger = "0.11.3"
log = "0.4.20"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
actix-cors = "0.7.1"